--- a/grails-app/i18n/messages_cs_CZ.properties
+++ b/grails-app/i18n/messages_cs_CZ.properties
@@ -53,3 +53,16 @@ typeMismatch.java.lang.Long=Položka {0} musí být validní číslo
 typeMismatch.java.lang.Short=Položka {0} musí být validní číslo
 typeMismatch.java.math.BigDecimal=Položka {0} musí být validní číslo
 typeMismatch.java.math.BigInteger=Položka {0} musí být validní číslo
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
