--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -53,3 +53,18 @@ typeMismatch.java.lang.Long=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.lang.Short=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigDecimal=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine gültige Zahl sein
+
+# Custom text
+Feedbeck\ Form=Feedback Form
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
