--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -17,3 +17,16 @@ default.not.unique.message=La propriété [{0}] de la classe [{1}] avec la valeu
 
 default.paginate.prev=Précédent
 default.paginate.next=Suivant
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
