--- a/grails-app/i18n/messages_pl.properties
+++ b/grails-app/i18n/messages_pl.properties
@@ -57,3 +57,16 @@ typeMismatch.java.lang.Long=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.lang.Short=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.math.BigDecimal=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.math.BigInteger=Właściwość {0} musi być poprawnyą liczbą
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
