--- a/grails-app/i18n/messages_pt_PT.properties
+++ b/grails-app/i18n/messages_pt_PT.properties
@@ -32,3 +32,16 @@ typeMismatch.java.lang.Long=O campo {0} deve ser um número valido.
 typeMismatch.java.lang.Short=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigDecimal=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigInteger=O campo {0} deve ser um número válido.
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
