--- a/grails-app/i18n/messages_ru.properties
+++ b/grails-app/i18n/messages_ru.properties
@@ -29,3 +29,16 @@ typeMismatch.java.lang.Long=Значение поля {0} не является 
 typeMismatch.java.lang.Short=Значение поля {0} не является допустимым числом
 typeMismatch.java.math.BigDecimal=Значение поля {0} не является допустимым числом
 typeMismatch.java.math.BigInteger=Значение поля {0} не является допустимым числом
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
