--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -53,3 +53,16 @@ typeMismatch.java.lang.Long=La proprietà {0} deve essere un numero valido
 typeMismatch.java.lang.Short=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigDecimal=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigInteger=La proprietà {0} deve essere un numero valido
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
