--- a/grails-app/i18n/messages_nb.properties
+++ b/grails-app/i18n/messages_nb.properties
@@ -53,4 +53,17 @@ typeMismatch.java.lang.Long=Feltet {0} må være et gyldig heltall
 typeMismatch.java.lang.Short=Feltet {0} må være et gyldig heltall
 typeMismatch.java.math.BigDecimal=Feltet {0} må være et gyldig tall
 typeMismatch.java.math.BigInteger=Feltet {0} må være et gyldig heltall
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
 
