--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -53,3 +53,16 @@ typeMismatch.java.lang.Long=Attribuut {0} is geen geldig nummer
 typeMismatch.java.lang.Short=Attribuut {0} is geen geldig nummer
 typeMismatch.java.math.BigDecimal=Attribuut {0} is geen geldig nummer
 typeMismatch.java.math.BigInteger=Attribuut {0} is geen geldig nummer
+Feedbeck\ Form=Create property
+custom.text.FeedbackForm=Feedback Form
+custom.label.firstName=First Name
+custom.label.comments=Comments
+custom.label.password=Password
+custom.label.notify=Notify
+custom.label.gender=Gender
+custom.label.female=Female
+custom.label.male=Male
+custom.label.marketing=How did you hear about us?
+custom.label.internet=Internet
+custom.label.friend=Friend
+custom.label.other=Other
