--- a/grails-app/i18n/messages_pt_PT.properties
+++ b/grails-app/i18n/messages_pt_PT.properties
@@ -45,3 +45,4 @@ custom.label.marketing=How did you hear about us?
 custom.label.internet=Internet
 custom.label.friend=Friend
 custom.label.other=Other
+custom.message.inputCellNumber=Enter your cell number to check in
