--- a/grails-app/i18n/messages_zh_CN.properties
+++ b/grails-app/i18n/messages_zh_CN.properties
@@ -9,6 +9,7 @@ custom.label.marketing=How did you hear about us?
 custom.label.notify=Notify
 custom.label.other=Other
 custom.label.password=Password
+custom.message.inputCellNumber=Enter your cell number to check in
 custom.text.FeedbackForm=Feedback Form
 default.blank.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u4E0D\u80FD\u4E3A\u7A7A
 default.doesnt.match.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u7684\u503C[{2}]\u4E0E\u5B9A\u4E49\u7684\u6A21\u5F0F [{3}]\u4E0D\u5339\u914D
